# acts-core

./: CMakeLists.txt
Core/include/Acts/Alignment/: Alignment.hpp  AlignmentError.hpp
Core/include/Acts/Alignment/detail/: AlignmentEngine.hpp
Core/include/Acts/EventData/: SingleFreeParameters.hpp
Core/include/Acts/Fitter/: KalmanFitter.hpp
Core/include/Acts/Geometry/: DetectorElementStub.hpp  LineSurfaceStub.hpp  TelescopeTrackingGeometry.hpp
Core/include/Acts/Propagator/: EigenStepper.ipp
Core/include/Acts/TrackFinder/: CombinatorialKalmanFilter.hpp
Core/include/Acts/Utilities/: ParameterDefinitions.hpp
Core/include/Acts/Utilities/detail/: DefaultParameterDefinitions.hpp
Core/include/Acts/Vertexing/: FullBilloirVertexFitter.ipp  HelicalTrackLinearizer.ipp
Core/include/Acts/detail/: AlignmentEngine.hpp
Examples/: CMakeLists.txt
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Alignment/: CMakeLists.txt
Examples/Algorithms/Alignment/include/ACTFW/Alignment/: Alignment.hpp  AlignmentAlgorithm.hpp  AlignmentError.hpp
Examples/Algorithms/Alignment/src/: AlignmentAlgorithm.cpp  AlignmentAlgorithmAlignmentFunction.cpp
Examples/Algorithms/TelescopeTracking/: CMakeLists.txt
Examples/Algorithms/TelescopeTracking/include/ACTFW/TelescopeTracking/: TelescopeTrackingAlgorithm.hpp
Examples/Algorithms/TelescopeTracking/src/: TelescopeTrackingAlgorithm.cpp
Examples/AlpideBeamTele/doc/: run_telescope_tracking.rst
Examples/AlpideBeamTele/exe/: CMakeLists.txt
Examples/AlpideBeamTele/include/: BuildTelescopeDetector.hpp  ObjTelescopeTrackWriter.hpp  TelescopeDetector.hpp
Examples/AlpideBeamTele/src/: ObjTelescopeTrackWriter.cpp  RootTelescopeTrackWriter.cpp  TelescopeDetector.cpp  TelescopeTrackingAlgorithmFitterFunction.cpp  TelescopeTrackingPerformanceWriter.cpp
Examples/Detectors/: CMakeLists.txt
Examples/Detectors/TelescopeDetector/: CMakeLists.txt
Examples/Detectors/TelescopeDetector/include/ACTFW/TelescopeDetector/: BuildTelescopeDetector.hpp
Examples/Framework/: CMakeLists.txt
Examples/Framework/include/ACTFW/EventData/: PixelMultiTrajectory.hpp  PixelSourceLink.hpp  Track.hpp
Examples/Framework/include/ACTFW/Validation/: MLTrackClassifier.hpp
Examples/Framework/src/Validation/: MLTrackClassifier.cpp
Examples/Io/Csv/: CMakeLists.txt
Examples/Io/Csv/include/ACTFW/Io/Csv/: CsvMultiTrajectoryWriter.hpp
Examples/Io/Csv/src/: CsvMultiTrajectoryWriter.cpp
Examples/Io/Performance/: CMakeLists.txt
Examples/Io/Performance/ACTFW/Io/Performance/: CKFPerformanceWriter.cpp  CKFPerformanceWriter.hpp  CKFPerformanceWriterOptions.cpp  CKFPerformanceWriterOptions.hpp  TelescopeTrackingPerformanceWriter.cpp
Examples/Io/Root/: CMakeLists.txt
Examples/Io/Root/include/ACTFW/Io/Root/: RootTelescopeTrackWriter.hpp
Examples/Io/Root/src/: RootTelescopeTrackWriter.cpp
Examples/RecoTelescope/: CMakeLists.txt
Examples/RecoTelescope/exe/: CMakeLists.txt  RecTelescopeTracks.cpp
Examples/RecoTelescope/include/: TelescopeDetectorElement.hpp  TelescopeTrackingPerformanceWriter.hpp
Examples/RecoTelescope/rapidjson/: CMakeLists.txt
Examples/RecoTelescope/src/: RootTelescopeTrackWriter.cpp  TelescopeDetector.cpp  TelescopeTrackingAlgorithm.cpp  TelescopeTrackingAlgorithmFitterFunction.cpp  TelescopeTrackingPerformanceWriter.cpp
Examples/Run/Reconstruction/: CMakeLists.txt  RecCKFTracks.cpp  RecCKFTracksWithML.cpp  RecTelescopeTracks.cpp
Examples/Run/Reconstruction/rapidjson/: myrapidjson.h
Tests/UnitTests/Core/: CMakeLists.txt
Tests/UnitTests/Core/Alignment/: AlignmentTests.cpp  CMakeLists.txt
Tests/UnitTests/Core/Fitter/: KalmanFitterTests.cpp
Tests/UnitTests/Core/Vertexing/: LinearizedTrackFactoryTests.cpp
docs/howto/: run_telescope_tracking.rst
